feat: Implement WebSocket client and update project structure

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/socket.io-client": "^3.0.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
   }
 }
